--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -111,6 +111,9 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
+    implementation 'com.github.espressif:esp-idf-provisioning-android:lib-2.4.2'
+    implementation 'org.greenrobot:eventbus:3.3.1'
+
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
